# maze-lambda

./: .gitignore  Cargo.toml  README.md  package-lock.json  payload.json  serverless.yml
src/: main.rs
