[package]
name = "maze-gen"
version = "0.1.0"
authors = ["animate-object <alexander.f.prinsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde_json = "1.0.45"
serde_derive = "1.0.104"
serde = "1.0.104"
maze = { git = "https://github.com/animate-object/mazes", rev = "169f23d" }
